# QT

./: CMakeLists.txt  consumer.cpp  consumer.h  counter.cpp  counter.h  firstcode.cpp  firstcode.h  main.cpp  manager.cpp  manager.h  producer.cpp  producer.h  remote_television.cpp  remote_television.h  test.cpp  test.h  widget.cpp  widget.h  worker.cpp  worker.h
Asynchronous_code/: CMakeLists.txt  main.cpp
Inheriting_QThread/: CMakeLists.txt  main.cpp  worker.h
QMutex/: counter.cpp
QMutex_Locker/: counter.cpp
QObjectclass/build-first-Desktop_Qt_6_6_1_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  first
QObjectclass/build-first-Desktop_Qt_6_6_1_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-8eed12dfdd23a0db4c0e.json  cmakeFiles-v1-17e6440c3c701c9b239b.json  codemodel-v2-bd1a0ae8e718547951c1.json  index-2024-01-06T21-04-10-0305.json  target-first-Debug-b185e56129d1c77afd1e.json  target-first_autogen-Debug-2e96a1b308d40111927e.json  target-first_autogen_timestamp_deps-Debug-a86b6d3de9252709d7f9.json
QObjectclass/build-first-Desktop_Qt_6_6_1_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
QObjectclass/build-first-Desktop_Qt_6_6_1_GCC_64bit-Debug/first_autogen/: deps  mocs_compilation.cpp
QObjectclass/build-first-Desktop_Qt_6_6_1_GCC_64bit-Debug/first_autogen/EWIEGA46WW/: moc_firstcode.cpp  moc_firstcode.cpp.d
